# legged-control-study

./: .gitignore  README.md
notes/: 00_总览.md  01_NMPC详解.md  02_WBC详解.md  03_状态估计.md  04_数学基础.md  05_代码结构.md  06_对比分析.md  07_学习路径.md  README.md  test_inline_latex.md  test_latex.md
src/legged_a1_description/: CMakeLists.txt  package.xml
src/legged_a1_description/meshes/: a1
src/legged_a1_description/urdf/: const.xacro  imu.xacro  leg.xacro  materials.xacro  robot.xacro
src/legged_simulation/: CMakeLists.txt  package.xml
src/legged_simulation/config/: controllers.yaml
src/legged_simulation/launch/: simulation.launch.py  test_joint_control.launch.py
src/legged_simulation/urdf/: test_joint_control.urdf
src/legged_wbc_ros2/: CMakeLists.txt  README.md  package.xml
src/legged_wbc_ros2/include/legged_wbc_ros2/: HoQp.h  Task.h  WbcBase.h  gait_generator.hpp
src/legged_wbc_ros2/launch/: wbc.launch.py
src/legged_wbc_ros2/src/: HoQp.cpp  Task.cpp  WbcBase.cpp  gait_generator.cpp  stand_controller.cpp  wbc_node.cpp
